# vatomic

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/: Dockerfile.boogie
.github/workflows/: actions.yml  publish-docs.yml
cmake/: doc.cmake  export.cmake
doc/: CONTRIBUTING.md
doc/man/: vatomic.7  vatomic_await.3  vatomic_await_op.3  vatomic_basic.3  vatomic_cmpxchg.3
docs/: PUBLISHING.md
include/vsync/: atomic.hpp  vtypes.h
include/vsync/atomic/: core.h  core_bool.hpp  core_ptr.hpp  core_s16.hpp  core_s32.hpp  core_s64.hpp  core_s8.hpp  core_sz.hpp  core_u16.hpp  core_u32.hpp  core_u64.hpp  core_u8.hpp  dispatch.h
include/vsync/atomic/internal/: dispatch.h  dispatch_c11.h  dispatch_gnu.h  dispatch_select.h  macros.h
include/vsync/common/: macros.h  verify.h
include/vsync/cpp/atomic/: core_bool.hpp  core_ptr.hpp  core_s16.hpp  core_s32.hpp  core_s64.hpp  core_s8.hpp  core_sz.hpp  core_u16.hpp  core_u32.hpp  core_u64.hpp  core_u8.hpp
scripts/: clang-format.sh  license-check.sh  publish-docs.sh
template/atomic/: dispatch.h.in
template/atomic/internal/: CMakeLists.txt
template/atomic/internal/config/: CMakeLists.txt
template/cpp-atomic/: CMakeLists.txt  signed_core_TY.hpp.in  unsigned_core_TY.hpp.in
template/include/vsync/: CMakeLists.txt
template/include/vsync/atomic/: CMakeLists.txt  vatomic.rules
template/include/vsync/atomic/internal/: CMakeLists.txt
template/include/vsync/atomic/internal/config/: CMakeLists.txt
template/include/vsync/cpp/: CMakeLists.txt  signed_core_TY.hpp.in  unsigned_core_TY.hpp.in
template/test-atomic/: mt_test_await_TY.c.in  mt_test_rmw_TY.c.in  ut_test_TY.c.in  ut_test_await_TY.c.in
test/: CMakeLists.txt
test/atomics/: CMakeLists.txt  leftover_patterns.txt
test/atomics_basic/: CMakeLists.txt  vatomic_basic.c.in
test/atomics_cxx/: CMakeLists.txt  mt.cpp  ut_int_types.cpp  vatomic_empty.cpp
test/atomics_gen/: CMakeLists.txt  mt_test_await_ptr.c  mt_test_await_u32.c  mt_test_await_u64.c  mt_test_rmw_sz.c  mt_test_rmw_u32.c  mt_test_rmw_u64.c  ut_test_await_ptr.c  ut_test_await_u32.c  ut_test_await_u64.c  ut_test_ptr.c  ut_test_sz.c  ut_test_u16.c  ut_test_u32.c  ut_test_u64.c  ut_test_u8.c
test/atomics_gen/templates/: CMakeLists.txt
test/dispatch/: CMakeLists.txt  dispatch_backend_probe.c
test/sanity/: CMakeLists.txt
tmplr/: tmplr.c
verify/: README.md  cleaner.sh  generate.sh  verify.sh
verify/boogie/: atomics_list.txt
verify/boogie/templates/: BoogieTemplate.md
